--- a/quotetrack/pom.xml
+++ b/quotetrack/pom.xml
@@ -16,5 +16,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
