--- a/quotetrack/pom.xml
+++ b/quotetrack/pom.xml
@@ -22,5 +22,10 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.33.Final</version>
+        </dependency>
     </dependencies>
 </project>
